--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 
 <body>
-    Shall I compare <span>thee</span> to a <span>summer’s day</span>>?
-    Thou art more <span>lovely</span> and more <span>temperate</span>.
-    <span>Rough winds</span> do shake the <span>darling</span> <span>buds</span> of May,
-    So long as <span>men</span> can <span>breathe,</span> or eyes can see,
-    So long lives <span>this,</span> and this gives <span>life</span> to thee.
+    Shall I compare <span id="noun1">thee</span> to a <span id="noun2">summer’s day</span>?
+    Thou art more <span id="adjective1">lovely</span> and more <span id="adjective2">temperate</span>.
+    Rough winds do <span id="verb1">shake</span> the <span id="adjective3">darling</span> <span id="noun3">buds</span>
+    of May,
+    So long as <spa id="noun4">men</span> can <span id="verb2">breathe,</span> or eyes can see,
+        So long lives <span id="noun5">this</span>, and this <span id="verb3">gives</span> life to thee.
 </body>
 
 </html>
