--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
@@ -15,5 +16,6 @@
     So long as <spa id="noun4">men</span> can <span id="verb2">breathe,</span> or eyes can see,
         So long lives <span id="noun5">this</span>, and this <span id="verb3">gives</span> life to thee.
 </body>
+<script type="module" src="app.js"></script>
 
 </html>
