made test and added imputs and button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 
 </head>
 
+<mid>
+    <input id="nounImputOne">
+    <br>
+    <input id="nounImputTwo">
+    <br>
+    <input id="nounImputThree">
+    <br>
+    <input id="nounImputFour">
+    <br>
+    <input id="nounImputTwo">
+    <button id="MadLipz">Mad Lipz</button>
+</mid>
+
 <body>
     Shall I compare <span id="noun1">thee</span> to a <span id="noun2">summer’s day</span>?
     Thou art more <span id="adjective1">lovely</span> and more <span id="adjective2">temperate</span>.
