--- a/index.html
+++ b/index.html
@@ -5,30 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
 </head>
-
-<mid>
-    <input id="nounImputOne">
-    <br>
-    <input id="nounImputTwo">
-    <br>
-    <input id="nounImputThree">
-    <br>
-    <input id="nounImputFour">
-    <br>
-    <input id="nounImputTwo">
-    <button id="MadLipz">Mad Lipz</button>
-</mid>
+<header>
+    <h1>Mad Lipz!!!</h1>
+</header>
 
 <body>
+    <div id="inputWrapper">
+        <input id="nounInputOne">
+        <br>
+        <input id="nounInputTwo">
+        <br>
+        <input id="adjectiveInputOne">
+        <br>
+        <input id="adjectiveInputTwo">
+        <br>
+        <input id="verbInputOne">
+        <br>
+        <input id="adjectiveInputThree">
+        <br>
+        <input id="nounInputThree">
+        <br>
+        <input id="nounInputFour">
+        <br>
+        <input id="verbInputTwo">
+        <br>
+        <input id="nounInputFive">
+        <br>
+        <input id="verbInputThree">
+        <br>
+        <button id="MadLipz">Mad Lipz</button>
+    </div>
+    <p id='poem'> </p>
+    <!-- Poem dosent have to be in here at all if we use the textContent to put it into the page as the button is clicked
     Shall I compare <span id="noun1">thee</span> to a <span id="noun2">summer’s day</span>?
     Thou art more <span id="adjective1">lovely</span> and more <span id="adjective2">temperate</span>.
     Rough winds do <span id="verb1">shake</span> the <span id="adjective3">darling</span> <span id="noun3">buds</span>
     of May,
     So long as <spa id="noun4">men</span> can <span id="verb2">breathe,</span> or eyes can see,
-        So long lives <span id="noun5">this</span>, and this <span id="verb3">gives</span> life to thee.
+        So long lives <span id="noun5">this</span>, and this <span id="verb3">gives</span> life to thee.  -->
 </body>
+
 <script type="module" src="app.js"></script>
 
 </html>
