added text input to madlib boxes

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 
 <body>
     <div id="inputWrapper">
-        <input id="nounInputOne">
+        <input placeholder="Noun" id="nounInputOne">
         <br>
-        <input id="nounInputTwo">
+        <input placeholder="Noun" id="nounInputTwo">
         <br>
-        <input id="adjectiveInputOne">
+        <input placeholder="Adjective" id="adjectiveInputOne">
         <br>
-        <input id="adjectiveInputTwo">
+        <input placeholder="Adjective" id="adjectiveInputTwo">
         <br>
-        <input id="verbInputOne">
+        <input placeholder="Verb" id="verbInputOne">
         <br>
-        <input id="adjectiveInputThree">
+        <input placeholder="Adjective" id="adjectiveInputThree">
         <br>
-        <input id="nounInputThree">
+        <input placeholder="Noun" id="nounInputThree">
         <br>
-        <input id="nounInputFour">
+        <input placeholder="Noun" id="nounInputFour">
         <br>
-        <input id="verbInputTwo">
+        <input placeholder="Verb" id="verbInputTwo">
         <br>
-        <input id="nounInputFive">
+        <input placeholder="Noun" id="nounInputFive">
         <br>
-        <input id="verbInputThree">
+        <input placeholder="Verb" id="verbInputThree">
         <br>
         <button id="MadLipz">Mad Lipz</button>
     </div>
