--- a/index.html
+++ b/index.html
@@ -4,39 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mad Lipz!</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cutive&    display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
+
 </head>
+
 <header>
     <h1>Mad Lipz!!!</h1>
 </header>
 
 <body>
-    <div id="inputWrapper">
-        <input id="nounInputOne">
+    <div id="inputWrapper" class="input-wrapper">
+        <h2>Fill in this mad lib for one rad poem</h2>
+        <input placeholder="Noun" id="nounInputOne">
         <br>
-        <input id="nounInputTwo">
+        <input placeholder="Noun" id="nounInputTwo">
         <br>
-        <input id="adjectiveInputOne">
+        <input placeholder="Adjective" id="adjectiveInputOne">
         <br>
-        <input id="adjectiveInputTwo">
+        <input placeholder="Adjective" id="adjectiveInputTwo">
         <br>
-        <input id="verbInputOne">
+        <input placeholder="Verb" id="verbInputOne">
         <br>
-        <input id="adjectiveInputThree">
+        <input placeholder="Adjective" id="adjectiveInputThree">
         <br>
-        <input id="nounInputThree">
+        <input placeholder="Noun" id="nounInputThree">
         <br>
-        <input id="nounInputFour">
+        <input placeholder="Noun" id="nounInputFour">
         <br>
-        <input id="verbInputTwo">
+        <input placeholder="Verb" id="verbInputTwo">
         <br>
-        <input id="nounInputFive">
+        <input placeholder="Noun" id="nounInputFive">
         <br>
-        <input id="verbInputThree">
+        <input placeholder="Verb" id="verbInputThree">
         <br>
         <button id="MadLipz">Mad Lipz</button>
     </div>
-    <p id='poem'> </p>
+    <p id='poem' class="poem"> </p>
     <!-- Poem dosent have to be in here at all if we use the textContent to put it into the page as the button is clicked
     Shall I compare <span id="noun1">thee</span> to a <span id="noun2">summer’s day</span>?
     Thou art more <span id="adjective1">lovely</span> and more <span id="adjective2">temperate</span>.
@@ -44,6 +52,7 @@
     of May,
     So long as <spa id="noun4">men</span> can <span id="verb2">breathe,</span> or eyes can see,
         So long lives <span id="noun5">this</span>, and this <span id="verb3">gives</span> life to thee.  -->
+
 </body>
 
 <script type="module" src="app.js"></script>
