Created separate divs for each line of the poem in html and added them to the clickhandler in java

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <br>
         <button id="MadLipz">Mad Lipz</button>
     </div>
+    <div id="line2" class="input-wrapper"></div>
+    <div id="line3" class="input-wrapper"></div>
+    <div id="line4" class="input-wrapper"></div>
+    <div id="line5" class="input-wrapper"></div>
     <p id='poem' class="poem"> </p>
     <!-- Poem dosent have to be in here at all if we use the textContent to put it into the page as the button is clicked
     Shall I compare <span id="noun1">thee</span> to a <span id="noun2">summer’s day</span>?
